--- a/tig_client/package.json
+++ b/tig_client/package.json
@@ -17,6 +17,7 @@
         "query-string": "^6.11.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-file-base64": "^1.0.3",
         "react-router-dom": "^5.0.0",
         "rxjs": "^6.3.3",
         "yup": "^0.28.1"
