--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ install_dependencies:
 testing:
  stage: test
  script:
+  - chmod 0777 ./node_modules/.bin/mocha
   - npm run test
  artifacts:
   paths:
