connect ECONNREFUSED 127.0.0.1:27017 error with gitlab-CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,15 @@
 image: node:latest
 
+services:
+  - mongo
+
+variables:
+  MONGO_DATABASE: db
+
+  Host: mongo
+  Database: db
+
+
 stages:
  - build
  - test
