config cluster in mongodb/not sure it will work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,5 @@
 image: node:latest
 
-services:
-  - mongo
-
-variables:
-  MONGO_DATABASE: db
-
-  Host: mongo
-  Database: db
-
-
 stages:
  - build
  - test
@@ -25,6 +15,15 @@ install_dependencies:
    
 testing:
  stage: test
+ services:
+  - mongo:latest
+
+ variables:
+  MONGO_DATABASE: test
+
+  Host: cluster0-e8bno.gcp.mongodb.net
+  Database: test
+  
  script:
   - chmod 0777 ./node_modules/.bin/mocha
   - npm run test
