--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "secret" : "yLT8HMvjSUS-nJ-VBda7BAfUuCrH9gp0eOGcrcoFBWEQBQJkgcA9x0-y_cJ3znDBFwgdE6yKPgZ0KlS112B1pKbg2WYA9TuoqkeXspO1wulN3w",
-    "connectionString": "mongodb://localhost/db",
+    "connectionString": "mongodb+srv://myUserAdmin:admin@cluster0-e8bno.gcp.mongodb.net/test?retryWrites=true&w=majority",
     "emailFrom": "info@the-islanders-guide.com",
     "smtpOptions": {
         "host": "smtp.ethereal.email",
