--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.5",
     "create-react-app": "^1.5.2",
+    "cypress-react-selector": "^0.1.6",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
