--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ testing:
  script:
   - chmod 0777 ./node_modules/.bin/mocha
   - chmod 0777 ./node_modules/.bin/start-test
+  - chmod 0777 ./node_modules/.bin/pm2
   - npm run test
  artifacts:
   paths:
