--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ install_dependencies:
  stage: build
  script:
   - npm install
-  - chmod -R u+x ./.bin
+  - chmod -R u+x .bin
  artifacts:
   paths:
    - tig_client/node_modules/
