cypress on gitlab ci v13

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,5 +28,5 @@ testing:
   - chmod -R +x node_modules/.bin
   - chmod -R +x tig_client/node_modules/.bin
   - find tig_client/node_modules/ -type f -name xdg-open -exec chmod a+x {} \;
-  - cypress install
+  - node_modules/.bin/cypress install
   - npm run test
