cypress on gitlab ci v15

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,6 @@ testing:
   - chmod -R +x node_modules/.bin
   - chmod -R +x tig_client/node_modules/.bin
   - find tig_client/node_modules/ -type f -name xdg-open -exec chmod a+x {} \;
-  - apt-get install libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+  - apt-get install xvfb
   - node_modules/.bin/cypress install
   - npm run test
