--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ testing:
  script:
   - chmod -R +x node_modules/.bin
   - chmod -R +x tig_client/node_modules/.bin
-  - find tig_client/node_modules/ -type f -name xdg-open -exec chmod a+x {} \;
-  - apt-get install xvfb
-  - node_modules/.bin/cypress install
+  #- find tig_client/node_modules/ -type f -name xdg-open -exec chmod a+x {} \;
+  #- apt-get install xvfb
+  #- node_modules/.bin/cypress install
   - npm run test
