--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the_islander_s_guide",
   "version": "1.0.0",
-  "description": "TBD",
+  "description": "Website that speaks to ACNH fans",
   "license": "MIT",
   "repository": {
     "type": "git",
