--- a/tig_client/package.json
+++ b/tig_client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "theislandersguide",
+    "name": "the_islander_s_guide",
     "version": "1.0.0",
     "repository": {
         "type": "git",
